Update Open Graph metadata and enhance farcaster.json for MiniQuiz app
- Revised Open Graph properties in index.html, including new image URL and button details.
- Added new fields in farcaster.json for improved app description, subtitle, and tags.
- Updated splash background color and required capabilities for better user experience.
- Introduced a new og.png image for enhanced social media sharing.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:url" content="https://mini-quiz-app.qudusayo.pro" />
     <meta
       name="fc:frame"
-      content='{"version":"1","name":"MiniQuiz","homeUrl":"https://mini-quiz-app.qudusayo.pro/","iconUrl":"https://mini-quiz-app.qudusayo.pro/logo.png","imageUrl":"https://mini-quiz-app.qudusayo.pro/framesV2/opengraph-image","buttonTitle":"🎮 Play Now!","requiredChains":["eip155:42220"],"button":{"title":"🎮 Play Now!","action":{"type":"launch_frame","name":"MiniQuiz","url":"https://mini-quiz-app.qudusayo.pro","splashImageUrl":"https://mini-quiz-app.qudusayo.pro/logo.png","splashBackgroundColor":"#f5f0ec"}}}'
+      content='{"version":"next","imageUrl":"https://mini-quiz-app.qudusayo.pro/og.png","button":{"title":"🎮 Play Now!","action":{"type":"launch_frame","name":"MiniQuiz","url":"https://mini-quiz-app.qudusayo.pro","splashImageUrl":"https://mini-quiz-app.qudusayo.pro/logo.png","splashBackgroundColor":"#3b08ac"}}}'
     />
   </head>
   <body>
