Update UI components and styles for improved user experience
- Changed splash background color in farcaster.json and index.html for better branding.
- Updated button styles in button.tsx for enhanced visibility.
- Refactored loading and error handling in leaderboard.tsx for clearer user feedback.
- Adjusted icon size in icon.tsx for better visual consistency.
- Updated logo and Open Graph images to align with new branding.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:url" content="https://mini-quiz-app.qudusayo.pro" />
     <meta
       name="fc:frame"
-      content='{"version":"next","imageUrl":"https://mini-quiz-app.qudusayo.pro/og.png","button":{"title":"🎮 Play Now!","action":{"type":"launch_frame","name":"MiniQuiz","url":"https://mini-quiz-app.qudusayo.pro","splashImageUrl":"https://mini-quiz-app.qudusayo.pro/logo.png","splashBackgroundColor":"#3b08ac"}}}'
+      content='{"version":"next","imageUrl":"https://mini-quiz-app.qudusayo.pro/og.png","button":{"title":"🎮 Play Now!","action":{"type":"launch_frame","name":"MiniQuiz","url":"https://mini-quiz-app.qudusayo.pro","splashImageUrl":"https://mini-quiz-app.qudusayo.pro/logo.png","splashBackgroundColor":"#7c65c1"}}}'
     />
   </head>
   <body>
